--- a/web/static/common/common.less
+++ b/web/static/common/common.less
@@ -1,47 +1,8 @@
-@bg-color: #f2f2f2;
-@text-color: #606266;
+@import "~./var.less";
 
 body{margin: 0;padding: 0;background-color: @bg-color;}
 
 :root{
   --white: #fff;
   --black: #333;
-}
-
-.width(@value: 100%){
-  width: @value;
-}
-.text-align(@value: center) {
-  text-align: @value;
-}
-
-// margin
-.margin(@value: 0) {
-  margin: @value;
-}
-.margin-btm(@value: 1.5rem) {
-  margin-bottom: @value
-}
-.margin-top(@value: 1rem){
-  margin-top: @value
-}
-
-//padding
-.padding-btm(@value: 15px) {
-  padding-bottom: @value
-}
-
-.line-height(@value: 0) {
-  line-height: @value;
-}
-
-.border(@color: #ddd) {
-  border: 1px solid @color;
-}
-.border-radius(@value: 5px;) {
-  border-radius: @value;
-}
-
-.font-size(@value: 16px;) {
-  font-size: @value;
 }
